// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSecret /> should call the click handler when "Get New Secret" is pressed 1`] = `
<div
  className="alert alert-warning"
>
  <p>
    You can regenerate your app secret below. This process will clear your old secret and require updates to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button"
  >
    Regenerate App secret
  </button>
  <p>
    <strong>
      Here is your new secret.
    </strong>
    <br />
    <code>
      a-test-secret
    </code>
  </p>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div
  className="alert alert-warning"
>
  <p>
    You can regenerate your app secret below. This process will clear your old secret and require updates to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button"
  >
    Regenerate App secret
  </button>
</div>
`;
